--- a/index.html
+++ b/index.html
@@ -71,9 +71,6 @@
 
         .pair-display {
             margin-top: 20px;
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
         }
 
         .pair {
@@ -120,7 +117,8 @@
     const pairDisplay = document.getElementById('pair-display');
     const nextButton = document.getElementById('next-button');
 
-    let targetNumber;
+    const numbers = [6, 13, 19, 26, 28, 38, 42, 48, 60, 65, 90];
+    let usedNumbers = new Set();
     let factors = [];
     let selectedCards = [];
     let correctCount = 0;
@@ -138,6 +136,7 @@
         correctCountElement.textContent = correctCount;
         nextButton.style.display = 'none';
         pairDisplay.innerHTML = '';
+        usedNumbers.clear();
     }
 
     function nextQuestion() {
@@ -151,33 +150,31 @@
     }
 
     function generateQuestion() {
-        targetNumber = getSquareOrRandomNumber();
+        let number;
+        do {
+            number = numbers[Math.floor(Math.random() * numbers.length)];
+        } while (usedNumbers.has(number));
+        usedNumbers.add(number);
+
+        targetNumber = number;
         numberElement.textContent = targetNumber;
-        factors = getFactorPairs(targetNumber);
-        pairDisplay.innerHTML = '';  // 清空先前的配對結果
+        factors = getFactors(targetNumber);
+        pairDisplay.innerHTML = `因數：${factors.join('、')}`; // 顯示完整因數
     }
 
-    function getSquareOrRandomNumber() {
-        const squareNumbers = [4, 9, 16, 25, 36, 49, 64, 81, 100];
-        return Math.random() < 0.5
-            ? squareNumbers[Math.floor(Math.random() * squareNumbers.length)]
-            : Math.floor(Math.random() * 90) + 10;
-    }
-
-    function getFactorPairs(num) {
-        const pairs = [];
-        for (let i = 1; i <= Math.sqrt(num); i++) {
+    function getFactors(num) {
+        const factors = [];
+        for (let i = 1; i <= num; i++) {
             if (num % i === 0) {
-                pairs.push([i, num / i]);
+                factors.push(i);
             }
         }
-        return pairs;
+        return factors;
     }
 
     function displayOptions() {
         optionsContainer.innerHTML = '';
-        const flatFactors = factors.flat();
-        const options = flatFactors.concat(generateNonFactors(flatFactors));
+        const options = [...factors, ...generateNonFactors(factors)];
         shuffle(options);
 
         options.forEach(value => {
@@ -221,7 +218,6 @@
                 second.classList.add('correct');
                 correctCount++;
                 correctCountElement.textContent = correctCount;
-                displayPair(first.dataset.value, second.dataset.value);
                 checkAllMatched();
             } else {
                 playSound('wrong');
@@ -239,10 +235,7 @@
     function checkMatch(card1, card2) {
         const value1 = parseInt(card1.dataset.value);
         const value2 = parseInt(card2.dataset.value);
-        return factors.some(pair =>
-            (pair[0] === value1 && pair[1] === value2) ||
-            (pair[0] === value2 && pair[1] === value1)
-        );
+        return factors.includes(value1) && factors.includes(value2) && value1 !== value2;
     }
 
     function playSound(type) {
@@ -251,16 +244,9 @@
         sound.play();
     }
 
-    function displayPair(value1, value2) {
-        const pairDiv = document.createElement('div');
-        pairDiv.classList.add('pair');
-        pairDiv.textContent = `${value1} × ${value2}`;
-        pairDisplay.appendChild(pairDiv);
-    }
-
     function checkAllMatched() {
         const matchedCards = document.querySelectorAll('.correct');
-        if (matchedCards.length === factors.flat().length) {
+        if (matchedCards.length === factors.length) {
             nextButton.style.display = 'block';
         }
     }
