--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
             margin: 0;
         }
 
+        #progress {
+            font-size: 20px;
+            margin: 10px 0;
+        }
+
         #target-number {
             font-size: 24px;
-            margin: 20px 10px;
+            margin: 10px 0;
         }
 
         #options {
@@ -89,7 +94,8 @@
             border-radius: 5px;
             cursor: pointer;
             display: none;
-            margin-top: 20px;
+            margin: 20px auto;
+            display: block;
         }
 
         #next-button:hover {
@@ -100,6 +106,7 @@
 <body>
 
 <h1>找因數配對遊戲</h1>
+<div id="progress">目前已挑戰第 <span id="current-question">1</span> / 10 題</div>
 <div id="target-number">請找出數字 <strong id="number"></strong> 的因數配對</div>
 <div id="options"></div>
 <div id="score">正確配對：<span id="correct-count">0</span> | 錯誤配對：<span id="incorrect-count">0</span></div>
@@ -111,6 +118,7 @@
 <audio id="wrong-sound" src="wrong.mp3"></audio>
 
 <script>
+    const progressElement = document.getElementById('current-question');
     const numberElement = document.getElementById('number');
     const optionsContainer = document.getElementById('options');
     const correctCountElement = document.getElementById('correct-count');
@@ -118,14 +126,12 @@
     const pairDisplay = document.getElementById('pair-display');
     const nextButton = document.getElementById('next-button');
 
-    const numbers = [6, 13, 19, 26, 28, 38, 42, 48, 60, 65, 90];
-    let usedNumbers = new Set();
     let factors = [];
     let selectedCards = [];
     let correctCount = 0;
     let incorrectCount = 0;
-    let currentQuestion = 0;
-    const TOTAL_QUESTIONS = 20;
+    let currentQuestion = 1;
+    const TOTAL_QUESTIONS = 10;
 
     function startGame() {
         resetGame();
@@ -135,18 +141,18 @@
     function resetGame() {
         correctCount = 0;
         incorrectCount = 0;
-        currentQuestion = 0;
+        currentQuestion = 1;
         correctCountElement.textContent = correctCount;
         incorrectCountElement.textContent = incorrectCount;
         nextButton.style.display = 'none';
         pairDisplay.innerHTML = '';
-        usedNumbers.clear();
     }
 
     function nextQuestion() {
-        if (currentQuestion < TOTAL_QUESTIONS) {
+        if (currentQuestion <= TOTAL_QUESTIONS) {
             generateQuestion();
             displayOptions();
+            progressElement.textContent = currentQuestion;
             currentQuestion++;
         } else {
             alert(`遊戲結束！你完成了 ${correctCount} 次正確配對。`);
@@ -154,32 +160,25 @@
     }
 
     function generateQuestion() {
-        let number;
-        do {
-            number = numbers[Math.floor(Math.random() * numbers.length)];
-        } while (usedNumbers.has(number));
-        usedNumbers.add(number);
-
-        targetNumber = number;
-        numberElement.textContent = targetNumber;
-        factors = getFactorPairs(targetNumber);
+        const number = Math.floor(Math.random() * 100) + 1;
+        numberElement.textContent = number;
+        factors = getFactors(number);
         pairDisplay.innerHTML = '';  // 清空配對結果
     }
 
-    function getFactorPairs(num) {
-        const pairs = [];
-        for (let i = 1; i <= Math.sqrt(num); i++) {
+    function getFactors(num) {
+        const factors = [];
+        for (let i = 1; i <= num; i++) {
             if (num % i === 0) {
-                pairs.push([i, num / i]);
+                factors.push(i);
             }
         }
-        return pairs;
+        return factors.sort((a, b) => a - b);
     }
 
     function displayOptions() {
         optionsContainer.innerHTML = '';
-        const flatFactors = factors.flat();
-        const options = flatFactors.concat(generateNonFactors(flatFactors));
+        const options = [...factors, ...generateNonFactors(factors)];
         shuffle(options);
 
         options.forEach(value => {
@@ -195,7 +194,7 @@
     function generateNonFactors(existingNumbers) {
         const nonFactors = [];
         while (nonFactors.length < existingNumbers.length) {
-            const randomNum = Math.floor(Math.random() * 90) + 2;
+            const randomNum = Math.floor(Math.random() * 100) + 1;
             if (!existingNumbers.includes(randomNum)) {
                 nonFactors.push(randomNum);
             }
@@ -243,10 +242,7 @@
     function checkMatch(card1, card2) {
         const value1 = parseInt(card1.dataset.value);
         const value2 = parseInt(card2.dataset.value);
-        return factors.some(pair =>
-            (pair[0] === value1 && pair[1] === value2) ||
-            (pair[0] === value2 && pair[1] === value1)
-        );
+        return factors.includes(value1) && factors.includes(value2) && value1 * value2 === parseInt(numberElement.textContent);
     }
 
     function playSound(type) {
@@ -264,9 +260,9 @@
 
     function checkAllMatched() {
         const matchedCards = document.querySelectorAll('.correct');
-        if (matchedCards.length === factors.flat().length) {
+        if (matchedCards.length === factors.length) {
             nextButton.style.display = 'block';
-            pairDisplay.innerHTML += `<p>${targetNumber} 的因數有：${factors.flat().join('、')}</p>`;
+            pairDisplay.innerHTML += `<p>${numberElement.textContent} 的因數有：${factors.join('、')}</p>`;
         }
     }
 
